# at3-grp3-airfare-streamlit-app

./: Dockerfile  README.md  ZeyuanWang_14372534_app.py  Zeyuan_Wang-14372534-app.py  feature_scaler.pkl  label_encoders.pkl  main.py  pyproject.toml  requirements.txt  target_scaler.pkl
models/: model_West_Coast_Hubs.pkl  model_ZeyuanWang_14372534.h5  model_rusanvaidya_24886400.joblib
src/: dz_processing.py  hoa_processing.py  rusan_processing.py  zeyuan_processing.py
src/features/: dz_preprocessing.py
